Style: changed formatting and added extra label * added another label for serial code because it was missed earlier * fixed spacing of input fields to be aligned and spaced properly * centered confirm button

--- a/Stuff-Stash/client/src/components/styles/assetCard.css
+++ b/Stuff-Stash/client/src/components/styles/assetCard.css
@@ -137,5 +137,11 @@
 }
 
 label {
-  margin-right: 10px;
+  display: inline-block;
+  width: 150px;
+  text-align: left;
+}
+
+.btn-confirm {
+  margin-left: auto;
 }
